so many new things.

--- a/example.conf
+++ b/example.conf
@@ -1,4 +1,9 @@
 main {
+    # identity information
+    nick = 
+    ident = 
+    real = 
+    # server information
     address = 
     port = 
     ssl = 
@@ -9,8 +14,8 @@ main {
     debug = False
     # these are the onconnect hooks which run after the End of MOTD is received.
     # possible hooks:
-    #   onjoin
-    onconnect = onjoin
+    #   join, pluginload
+    onconnect = join,pluginload
 }
 
 logging {
