Identification plugin, updated config

--- a/example.conf
+++ b/example.conf
@@ -23,3 +23,8 @@ logging {
     # logging levels: debug, info, error, warning, severe
     level = debug
 }
+
+identification {
+    # this is the filename without an extension
+    file = etc/users.db
+}
