--- a/example.conf
+++ b/example.conf
@@ -12,6 +12,7 @@ main {
     chan_key = 
     netname = 
     debug = False
+    fork = True
     # these are the onconnect hooks which run after the End of MOTD is received.
     # possible hooks:
     #   join, pluginload
@@ -22,9 +23,4 @@ logging {
     file = logs/ashiema.log
     # logging levels: debug, info, error, warning, severe
     level = debug
-}
-
-identification {
-    # this is the filename without an extension
-    file = etc/users
 }
