--- a/example.conf
+++ b/example.conf
@@ -24,3 +24,10 @@ logging {
     # logging levels: debug, info, error, warning, severe
     level = debug
 }
+
+plugins {
+    # tells the loader which plugins to skip when we're loading.
+    # example
+    #   skip_on_load = Plugin1,Plugin2,etc..
+    skip_on_load = ExamplePlugin
+}
