--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 logs
 logs/*
-*.pyc
 *.save
 test.conf
 lightspike.conf
@@ -9,5 +8,29 @@ plugins/IdentificationPlugin/users.db
 plugins/IdentificationPlugin/persist.db
 plugins/ArtificialIntelligence/brain.db
 plugins/ArtificialIntelligence/brain.old
-core/Memoizer.py
 LICENSE.min
+
+*.py[cod]
+*.so
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+pip-log.txt
+.coverage
+.tox
+nosetests.xml
+*.mo
+.mr.developer.cfg
+.project
+.pydevproject
