--- a/example.conf
+++ b/example.conf
@@ -16,18 +16,52 @@ main {
     # these are the onconnect hooks which run after the End of MOTD is received.
     # possible hooks:
     #   join, pluginload
+    # (NOTE:
+    #   If you deactivate the `pluginload` hook, you MUST realise that it is more than likely
+    #   that the bot may break AND/OR plugins will not load/will break.
+    #   If you deactivate the `join` hook, the bot will not join the channels specified in the
+    #   `channel` value.)
     onconnect = join,pluginload
 }
 
 logging {
+    # file to log to
     file = logs/ashiema.log
     # logging levels: debug, info, error, warning, severe
     level = debug
 }
 
 plugins {
-    # tells the loader which plugins to skip when we're loading.
-    # example
-    #   skip_on_load = Plugin1,Plugin2,etc..
-    skip_on_load = ExamplePlugin
+    # tells the loader what method to apply to the list of plugins specified
+    # possible types:
+    #   whitelist, blacklist
+    list-type = blacklist
+    # list of plugins to either load or prevent from loading, depending
+    # on the `list-type` setting.
+    #  example: ExamplePlugin,ArtificialIntelligence,etc..
+    list = ExamplePlugin
+}
+
+HTTPServer {
+    # host and port to bind the HTTP server to
+    bind_host = 
+    bind_port =
+    # path to public resources inside the HTTPServer plugin directory
+    # (it is recommended that you DO NOT change this UNLESS you ABSOLUTE know what you are doing.)
+    resource_path = /public
+    # route used to match requests to public resources
+    resource_route = /public/(.+)?$
+    # do we start the HTTP server in development mode?
+    # development mode exposes FULL TRACEBACKS TO THE PUBLIC when an exception is caught
+    # (it is recommended that you DO NOT change this UNLESS you ABSOLUTE know what you are doing.)
+    development = False
+    # do we start the HTTPServer automatically after the pluginload hook runs?
+    autostart = True
+}
+
+LogReader {
+    # channel to log to
+    channel = #ashiema
+    # file to read from.
+    files = /var/log/all.log
 }
