--- a/example.conf
+++ b/example.conf
@@ -13,6 +13,7 @@ main {
     netname = 
     debug = False
     fork = True
+    reconnect-on-err = True
     # these are the onconnect hooks which run after the End of MOTD is received.
     # possible hooks:
     #   join, pluginload
@@ -22,6 +23,11 @@ main {
     #   If you deactivate the `join` hook, the bot will not join the channels specified in the
     #   `channel` value.)
     onconnect = join,pluginload
+    # specify which cap extensions to request and load in to the bot
+    # note: if you don't know what this means, leave it alone.
+    # possible extensions:
+    #   account-notify, extended-join
+    capextensions = account-notify,extended-join
 }
 
 logging {
