--- a/example.conf
+++ b/example.conf
@@ -59,7 +59,7 @@ HTTPServer {
     resource_route = /public/(.+)?$
     # do we start the HTTP server in development mode?
     # development mode exposes FULL TRACEBACKS TO THE PUBLIC when an exception is caught
-    # (it is recommended that you DO NOT change this UNLESS you ABSOLUTE know what you are doing.)
+    # (it is recommended that you DO NOT change this UNLESS you ABSOLUTELY know what you are doing.)
     development = False
     # do we start the HTTPServer automatically after the pluginload hook runs?
     autostart = True
