--- a/example.conf
+++ b/example.conf
@@ -4,6 +4,10 @@ main {
     ident = 
     real = 
     # server information
+    # for IPv6, put the server address in square brackets:
+    #   address = [irc6.example.org]
+    # for IPv4, leave the address plain:
+    #   address = irc.example.org
     address = 
     port = 
     ssl = 
