--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,5 @@
--bsddb==0.0.0
--sqlite3==0.0.0
 PIL==1.1.7
-Pygments==1.6
-SQLObject==1.6.0
-argparse==1.2.1
-async==0.6.1
-bsddb3==6.1.0
-ecdsa==0.11
-ipcalc==1.1.2
-nose==1.3.0
-paramiko==1.14.0
-phabricator==0.4.0
-pycipher==0.5.0
-pycrypto==2.6.1
-pylibssh2==1.0.3
-pytz==2014.4
-qrcode==3.0
-raven==5.1.1
-scapy==2.2.0
+malibu==0.1.0-19
+qrcode==5.1
+six==1.9.0
 wsgiref==0.1.2
