--- a/example.conf
+++ b/example.conf
@@ -1,90 +1,90 @@
 [ashiema]
 
-# identity information
-nick = 
-ident = 
-real = 
+; identity information
+nick =
+ident =
+real =
 
-# server information
-# for IPv6, put the server address in square brackets:
-#   address = [irc6.example.org]
-# for IPv4, leave the address plain:
-#   address = irc.example.org
-address = 
-port = 
-ssl = 
-password = 
-channel = 
-chan_key = 
-netname = 
+; server information
+; for IPv6, put the server address in square brackets:
+;   address = [irc6.example.org]
+; for IPv4, leave the address plain:
+;   address = irc.example.org
+address =
+port =
+ssl =
+password =
+channel =
+chan_key =
+netname =
 debug = False
 fork = True
 reconnect-on-err = True
 
-# these are the onconnect hooks which run after the End of MOTD is received.
-# possible hooks:
-#   join, pluginload
-# (NOTE:
-#   If you deactivate the `pluginload` hook, you MUST realise that it is more than likely
-#   that the bot may break AND/OR plugins will not load/will break.
-#   If you deactivate the `join` hook, the bot will not join the channels specified in the
-#   `channel` value.)
+; these are the onconnect hooks which run after the End of MOTD is received.
+; possible hooks:
+;   join, pluginload
+; (NOTE:
+;   If you deactivate the `pluginload` hook, you MUST realise that it is more than likely
+;   that the bot may break AND/OR plugins will not load/will break.
+;   If you deactivate the `join` hook, the bot will not join the channels specified in the
+;   `channel` value.)
 onconnect = join,pluginload
 
-# specify which cap extensions to request and load in to the bot
-# note: if you don't know what this means, leave it alone.
-# possible extensions:
-#   account-notify, extended-join
+; specify which cap extensions to request and load in to the bot
+; note: if you don't know what this means, leave it alone.
+; possible extensions:
+;   account-notify, extended-join
 capextensions = account-notify,extended-join
 
 [logging]
 
-# file to log to
+; file to log to
 logfile = logs/ashiema.log
 
-# logging levels: debug, info, error, warning, severe
+; logging levels: debug, info, error, warning, severe
 loglevel = debug
 
-# do we also stream the log to the console (stdout)?
+; do we also stream the log to the console (stdout)?
 console_log = True
 
 [plugins]
 
-# tells the loader what method to apply to the list of plugins specified
-# possible types:
-#   whitelist, blacklist
+; tells the loader what method to apply to the list of plugins specified
+; possible types:
+;   whitelist, blacklist
 list-type = blacklist
 
-# list of plugins to either load or prevent from loading, depending
-# on the `list-type` setting.
-#  example: ExamplePlugin,ArtificialIntelligence,etc..
+; list of plugins to either load or prevent from loading, depending
+; on the `list-type` setting.
+;  example: ExamplePlugin,ArtificialIntelligence,etc..
 list = ExamplePlugin
 
 [plugin:HTTPServer]
 
-# host and port to bind the HTTP server to
-bind_host = 
+; host and port to bind the HTTP server to
+bind_host =
 bind_port =
 
-# path to public resources inside the HTTPServer plugin directory
-# (it is recommended that you DO NOT change this UNLESS you ABSOLUTE know what you are doing.)
+; path to public resources inside the HTTPServer plugin directory
+; (it is recommended that you DO NOT change this UNLESS you ABSOLUTE know what you are doing.)
 resource_path = /public
 
-# route used to match requests to public resources
+; route used to match requests to public resources
 resource_route = /public/(.+)?$
 
-# do we start the HTTP server in development mode?
-# development mode exposes FULL TRACEBACKS TO THE PUBLIC when an exception is caught
-# (it is recommended that you DO NOT change this UNLESS you ABSOLUTELY know what you are doing.)
+; do we start the HTTP server in development mode?
+; development mode exposes FULL TRACEBACKS TO THE PUBLIC when an exception is caught
+; (it is recommended that you DO NOT change this UNLESS you ABSOLUTELY know what you are doing.)
 development = False
 
-# do we start the HTTPServer automatically after the pluginload hook runs?
+; do we start the HTTPServer automatically after the pluginload hook runs?
 autostart = True
 
 [plugin:LogReader]
 
-# channel to log to
-channel = #ashiema
+; channel to log to
+channel = ;ashiema
 
-# file to read from.
+; file to read from.
 files = /var/log/all.log
